Fix: Animation not working on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  width: 100%;
+}
